test_cases/negative/shadowing.snek
value = 10;
value = 20;

export DEFAULT = value;
